syntax = "proto3";

package golem;

import "golem/worker_id.proto";

message VersionedWorkerId {
  WorkerId worker_id = 1;
  int32 template_version = 2;
}
