syntax = "proto3";

package golem;

import "golem/account_id.proto";
import "golem/worker_id.proto";
import "golem/worker_status.proto";

message WorkerMetadata {
  WorkerId worker_id = 1;
  AccountId account_id = 2;
  repeated string args = 3;
  map<string, string> env = 4;
  WorkerStatus status = 5;
  int32 template_version = 6;
  int32 retry_count = 7;
}
